@@ -10,6 +10,9 @@ CodeArea:
     * Fixed removing selected area after Enter/Backspace/Semicolon.
 Highlight:
     + `var` keyword.
+    * Improved performance for pair:
+        # clear previous highlight
+        # removed highlight when text changed
     * Fixed pairs.
 Start:
     + Enter listeners to buttons.
